--- a/index.html
+++ b/index.html
@@ -391,36 +391,54 @@
        </div>  
     </div>
   </footer>
-  <div class="modal-overlay">
-  <div class="modal">
-    <button type="button" class="modal-button">
-      <svg class="btn-icon" width="8" height="8"> 
-         <use href="./images/symbol-defs.svg#icon-close-black"></use>
-      </svg>
-    </button>
-<p>
-  Leave your contacts and we will call you back
-</p>
-<form class="order-form">
-  <label>
-    Name
-    <input type="name" name="contact_name" />
-  </label>
-  <label>
-    Phone
-    <input type="phone" name="contact_phone" />
-  </label>
-  <label>
-    Email
-  <input type="email" name="contack-email"/>
-  </label>
-  <label>
-    Comment
-    <input type="comment" name="comment"/>
-  </label>
-  <button type="submit">Place order</button>
-</form>
+  <div class="backdrop">
+   <div class="modal">
+      <button type="button" class="modal-btn">
+        <svg class="btn-icon" width="8" height="8"> 
+           <use href="./images/symbol-defs.svg#icon-close-black"></use>
+        </svg>
+      </button>
+       <p class="modal-text">
+          Leave your contacts and we will call you back
+       </p>
+          <form class="order-form">
+            <div class="modal-label">
+                <label for="user-name"   class="label-form">
+                  Name
+                </label>
+                  <input id="user-name" name="user-name" type="text" class="input-text">
+                   <svg class="personal-icon" width="18" height="24"> 
+                   <use href="./images/symbol-defs.svg#icon-person-black"></use>
+                   </svg>
+            </div>
+            <div class="modal-label">
+                <label for="user-phone"   class="label-form">
+                  Phone
+                </label>
+                  <input id="user-phone" name="user-name" type="text" class="input-text">
+                   <svg class="personal-icon" width="18" height="24"> 
+                   <use href="./images/symbol-defs.svg#icon-phone-black"></use>
+                   </svg>
+            </div>
+            <div>
+                <label for="user-email"   class="label-form">
+                  Email
+                </label>
+                   <input id="user-email" name="user-name" type="text" class="input-text">
+                   <svg class="personal-icon" width="18" height="24"> 
+                   <use href="./images/symbol-defs.svg#icon-email-black"></use>
+                   </svg>
+            </div>
+            <div>
+              <label for="user-comment"   class="label-form">
+                  Comment
+                </label>
+                <textarea id="user-comment" name="user-comment" placeholder="Text input" class="comment-u"></textarea>
+            </div>
+    </div>
+            
+            <button type="submit">Place order</button>
+         </form>
   </div>
-</div>
 </body>
 </html>
