--- a/index.html
+++ b/index.html
@@ -401,33 +401,39 @@
        <p class="modal-text">
           Leave your contacts and we will call you back
        </p>
-          <form class="order-form">
+          < class="order-form">
             <div class="modal-label">
                 <label for="user-name"   class="label-form">
                   Name
                 </label>
-                  <input id="user-name" name="user-name" type="text" class="input-text">
-                   <svg class="personal-icon" width="18" height="24"> 
-                   <use href="./images/symbol-defs.svg#icon-person-black"></use>
-                   </svg>
+                  </div class="user-form">
+                    <input id="user-name" name="user-name" type="text" class="input-text">
+                    <svg class="personal-icon" width="18" height="24"> 
+                     <use href="./images/symbol-defs.svg#icon-person-black"></use>
+                    </svg>
+                 </div>
             </div>
             <div class="modal-label">
                 <label for="user-phone"   class="label-form">
                   Phone
                 </label>
-                  <input id="user-phone" name="user-name" type="text" class="input-text">
+                <div class="user-form">
+                   <input id="user-phone" name="user-name" type="text" class="input-text">
                    <svg class="personal-icon" width="18" height="24"> 
                    <use href="./images/symbol-defs.svg#icon-phone-black"></use>
                    </svg>
+                </div>
             </div>
             <div>
                 <label for="user-email"   class="label-form">
                   Email
                 </label>
+                <div class="user-form">
                    <input id="user-email" name="user-name" type="text" class="input-text">
                    <svg class="personal-icon" width="18" height="24"> 
                    <use href="./images/symbol-defs.svg#icon-email-black"></use>
                    </svg>
+                </div>
             </div>
             <div>
               <label for="user-comment"   class="label-form">
@@ -435,10 +441,10 @@
                 </label>
                 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="comment-u"></textarea>
             </div>
-    </div>
             
             <button type="submit">Place order</button>
          </form>
+    </div>
   </div>
 </body>
 </html>
