--- a/index.html
+++ b/index.html
@@ -390,6 +390,19 @@
           </ul>   
        </div>  
     </div>
+    <div class="footer-form">
+      <p class="footer-form-text">Subscribe</p>
+      <form class="subscribe-form">
+        <label class="subscribe-label">
+         <input name="subscribe-name" type="email" placeholder="E-mail" class="subscribe-label-name">
+        </label>
+        <button type="submit" class="subscribe-button">Subscribe
+          <svg width="24" height="24" class="subscribe-button-icon">
+            <use href="./images/symbol-defs.svg#2"></use>
+          </svg>
+        </button>
+      </form>
+    </div>
   </footer>
   <div class="backdrop">
    <div class="modal">
@@ -401,12 +414,12 @@
        <p class="modal-text">
           Leave your contacts and we will call you back
        </p>
-          < class="order-form">
+          <form class="order-form">
             <div class="modal-label">
                 <label for="user-name"   class="label-form">
                   Name
                 </label>
-                  </div class="user-form">
+                  <div class="user-form">
                     <input id="user-name" name="user-name" type="text" class="input-text">
                     <svg class="personal-icon" width="18" height="24"> 
                      <use href="./images/symbol-defs.svg#icon-person-black"></use>
@@ -435,13 +448,23 @@
                    </svg>
                 </div>
             </div>
-            <div>
+            <div class="user-form">
               <label for="user-comment"   class="label-form">
                   Comment
                 </label>
                 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="comment-u"></textarea>
             </div>
-            
+            <div class="user-form">
+                <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="user-checkbox">
+                <label for="user-privacy" class="user-privacy-label">
+                  I accept the terms and conditions of the <span class="span-label">
+                    <svg width="10" height="8" class="user-privacy-icon">
+                      <use href="./images/symbol-defs.svg#1"></use>
+                    </svg>
+                  </span>
+                  <a class="privacy-link">Privacy Policy</a>
+                </label>
+            </div>
             <button type="submit">Place order</button>
          </form>
     </div>
