--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                    </svg>
                 </div>
             </div>
-            <div>
+            <div class="modal-label">
                 <label for="user-email"   class="label-form">
                   Email
                 </label>
@@ -448,14 +448,14 @@
                    </svg>
                 </div>
             </div>
-            <div class="user-form">
+            <div class="user-form-comment">
               <label for="user-comment"   class="label-form">
                   Comment
                 </label>
                 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="comment-u"></textarea>
             </div>
-            <div class="user-form">
-                <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="user-checkbox">
+            <div class="user-form-checkbox">
+                <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden">
                 <label for="user-privacy" class="user-privacy-label">
                   I accept the terms and conditions of the <span class="span-label">
                     <svg width="10" height="8" class="user-privacy-icon">
@@ -465,7 +465,7 @@
                   <a class="privacy-link">Privacy Policy</a>
                 </label>
             </div>
-            <button type="submit">Place order</button>
+            <button type="submit" class="btn-order">Place order</button>
          </form>
     </div>
   </div>
