--- a/index.html
+++ b/index.html
@@ -457,7 +457,8 @@
             <div class="user-form-checkbox">
                 <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden">
                 <label for="user-privacy" class="user-privacy-label">
-                  I accept the terms and conditions of the <span class="span-label">
+                  I accept the terms and conditions of the 
+                  <span class="span-label">
                     <svg width="10" height="8" class="user-privacy-icon">
                       <use href="./images/symbol-defs.svg#1"></use>
                     </svg>
