--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                   I accept the terms and conditions of the 
                   <span class="span-label">
                     <svg width="10" height="8" class="user-privacy-icon">
-                      <use href="./images/symbol-defs.svg#1"></use>
+                      <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                     </svg>
                   </span>
                   <a class="privacy-link">Privacy Policy</a>
