--- a/index.html
+++ b/index.html
@@ -455,14 +455,21 @@
                 <textarea id="user-comment" name="user-comment" placeholder="Text input" class="comment-u"></textarea>
             </div>
             <div class="user-form-checkbox">
-                <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden">
-                <label for="user-privacy" class="user-privacy-label">
-                  I accept the terms and conditions of the 
+                <input 
+                id="user-privacy" 
+                type="checkbox" 
+                value="true" 
+                name="user-privacy" 
+                class="modal-check visually-hidden">
+                <label 
+                for="user-privacy" 
+                class="user-privacy-label"> 
                   <span class="span-label">
                     <svg width="10" height="8" class="user-privacy-icon">
                       <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                     </svg>
                   </span>
+                  I accept the terms and conditions of the 
                   <a class="privacy-link">Privacy Policy</a>
                 </label>
             </div>
