--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
              </label>
                <button type="submit" class="subscribe-button">Subscribe
                  <svg width="24" height="24" class="subscribe-button-icon">
-                   <use href="./images/symbol-defs.svg#2"></use>
+                   <use href="./images/symbol-defs.svg#icon-telegram"></use>
                  </svg>
                </button>
             </form>
@@ -408,7 +408,7 @@
    <div class="modal">
       <button type="button" class="modal-btn">
         <svg class="btn-icon" width="8" height="8"> 
-           <use href="./images/symbol-defs.svg#icon-close-black"></use>
+           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
        <p class="modal-text">
@@ -422,7 +422,7 @@
                   <div class="user-form">
                     <input id="user-name" name="user-name" type="text" class="input-text">
                     <svg class="personal-icon" width="18" height="24"> 
-                     <use href="./images/symbol-defs.svg#icon-person-black"></use>
+                     <use href="./images/symbol-defs.svg#icon-person"></use>
                     </svg>
                  </div>
             </div>
@@ -433,7 +433,7 @@
                 <div class="user-form">
                    <input id="user-phone" name="user-name" type="text" class="input-text">
                    <svg class="personal-icon" width="18" height="24"> 
-                   <use href="./images/symbol-defs.svg#icon-phone-black"></use>
+                   <use href="./images/symbol-defs.svg#icon-phone"></use>
                    </svg>
                 </div>
             </div>
@@ -444,7 +444,7 @@
                 <div class="user-form">
                    <input id="user-email" name="user-name" type="text" class="input-text">
                    <svg class="personal-icon" width="18" height="24"> 
-                   <use href="./images/symbol-defs.svg#icon-email-black"></use>
+                   <use href="./images/symbol-defs.svg#icon-email"></use>
                    </svg>
                 </div>
             </div>
@@ -466,14 +466,15 @@
                 class="user-privacy-label"> 
                   <span class="span-label">
                     <svg width="10" height="8" class="user-privacy-icon">
-                      <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                      <use href="./images/symbol-defs.svg#icon-checkbox"></use>
                     </svg>
                   </span>
                   I accept the terms and conditions of the 
                   <a class="privacy-link">Privacy Policy</a>
                 </label>
             </div>
-            <button type="submit" class="btn-order">Place order</button>
+            <button type="submit" class="btn-order">Place order
+            </button>
          </form>
     </div>
   </div>
