--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 class="user-privacy-label"> 
                   <span class="span-label">
                     <svg width="10" height="8" class="user-privacy-icon">
-                      <use href="./images/symbol-defs.svg#icon-checkbox"></use>
+                      <use href="./images/symbol-defs.svg#icon-Vector"></use>
                     </svg>
                   </span>
                   I accept the terms and conditions of the 
